--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -8,7 +8,7 @@ $css-vars-use-native: true;
 
 
 
-$light-theme-background-color: #FFF !default;
+$light-theme-background-color: #FAFAFA !default;
 $dark-theme-background-color: #263238 !default;
 $black-theme-background-color: #000 !default;
 $default-theme-background-color: var(--light-theme-background-color) !default;
@@ -17,11 +17,8 @@ $light-theme-foreground-color: #212121 !default;
 $dark-theme-foreground-color: #eee !default;
 $black-theme-foreground-color: #eee !default;
 $default-theme-foreground-color: var(--light-theme-foreground-color) !default;
-$theme-foreground-color-for-colored-bg: #FFF !default;
 
 
-
-// MARK: - Marshall Sass variables to CSS custom properties
 
 @include css-vars((
     --light-theme-background-color:   $light-theme-background-color,
@@ -33,5 +30,4 @@ $theme-foreground-color-for-colored-bg: #FFF !default;
     --dark-theme-foreground-color:           $dark-theme-foreground-color,
     --black-theme-foreground-color:          $black-theme-foreground-color,
     --default-theme-foreground-color:        $default-theme-foreground-color,
-    --theme-foreground-color-for-colored-bg: $theme-foreground-color-for-colored-bg,
 ));
