--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -8,6 +8,8 @@
  * Requires varibles to be set with other stylesheets prior to calling
  */
 
+$css-vars-use-native: true !default;
+
 @import 'neon-animation-vars';
 @import '../basics/reset.css';
 @import 'neon-animation-renderer';
