--- a/assets/v2/neon/neon-structure.scss
+++ b/assets/v2/neon/neon-structure.scss
@@ -6,3 +6,33 @@
 @import 'neon-structure-vars';
 @import 'neon-shared-mixins';
 @import 'structure-renderer';
+
+
+body {
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
+    margin-bottom: 50vh;
+}
+
+
+main {
+    margin: auto;
+    max-width: 95%;
+    max-width: 95vw;
+    max-width: calc(100vw - 4rem);
+    padding-top: 2rem;
+}
+
+
+.app-bar {
+    @include position(sticky);
+    top: 0;
+
+    padding-top: calc(var(--app-bar-padding-top) + env(safe-area-inset-top));
+    padding-left: calc(var(--app-bar-padding-left) + env(safe-area-inset-left));
+    padding-right: calc(var(--app-bar-padding-right) + env(safe-area-inset-right));
+
+    margin-left: calc(0px - env(safe-area-inset-left));
+    margin-right: calc(0px - env(safe-area-inset-right));
+}
