--- a/assets/v2/neon/neon-effects.scss
+++ b/assets/v2/neon/neon-effects.scss
@@ -9,14 +9,15 @@
         max-width: 0vw;
         text-overflow: clip;
         white-space: nowrap;
-        transition: max-width 700ms ease-out, margin 400ms 300ms ease-out;
+        transition: max-width 700ms cubic-bezier(.25,0,0,1), margin 400ms 300ms ease-out;
 
-        *:hover>& {
+        *:hover>&,
+        *:focus>& {
             max-width: 100vw;
-            transition: max-width 700ms ease-in, margin 400ms ease-out;
+            transition: max-width 700ms cubic-bezier(1,0,.75,1), margin 400ms ease-out;
         }
         @at-root
-        .app-bar .image-button:not(:hover)>&.cta {
+        .app-bar .image-button:not(:hover):not(:focus)>&.cta {
             margin: 0em;
         }
     }
