--- a/assets/v2/neon/neon-animation-renderer.scss
+++ b/assets/v2/neon/neon-animation-renderer.scss
@@ -13,7 +13,9 @@
     --animation-duration-default: $animation-duration-default,
 ));
 
-* {
+*,
+*::before,
+*::after {
     transition-duration: var(--animation-duration-default);
     transition-timing-function: ease-in-out;
     transition-property: none;
