--- a/assets/v2/neon/neon-typography-renderer.scss
+++ b/assets/v2/neon/neon-typography-renderer.scss
@@ -30,3 +30,10 @@ h6 { font: var(--font-h6); }
 button {
     font: var(--font-button);
 }
+
+ul,
+ol {
+    &>li {
+        margin-left: 1em;
+    }
+}
