--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -294,4 +294,49 @@
     height: calc(100vh - var(--app-bar-height-auto));
 
     transition-property: width, top, left;
+    will-change: width, top, left;
+    transition-timing-function: cubic-bezier(.75,0,.95,1);
+
+    box-shadow: shadow(16);
+    z-index: 16;
+
+    .sidebar-shown &,
+    [data-sidebar=shown] & {
+        left: 0;
+        transition-timing-function: cubic-bezier(.06,0,.25,1);
+    }
+
+    // &::before {
+    //     content: "";
+    //     width: 100vw;
+    //     height: 100vh;
+    //     background-color: rgba(0,0,0,0.0);
+    //     pointer-events: none;
+    //     position: fixed;
+    //     z-index: 15;
+    //     top: 0;
+    //     left: 0;
+    //
+    //     transition-property: background-color;
+    //     will-change: background-color;
+    // }
+    //
+    // .sidebar-shown &::before {
+    //     background-color: rgba(0,0,0,0.3);
+    // }
+
+    // @at-root
+    // body>:not(.sidebar):not(.app-bar) {
+    //     transition-property: filter;
+    //     will-change: filter, pointer-events;
+    //     filter: blur(0px) brightness(100%);
+    // }
+    // @at-root
+    // .sidebar-shown body,
+    // body.sidebar-shown {
+    //     &>:not(.sidebar):not(.app-bar) {
+    //         filter: blur(5px) brightness(50%);
+    //         pointer-events: none;
+    //     }
+    // }
 }
