--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -19,6 +19,7 @@ $css-vars-use-native: true !default;
 @import 'css-vars';
 @import 'neon-structure';
 @import 'neon-effects';
+@import './neon-tables.css';
 
 
 
