--- a/assets/v2/neon/neon-tables.scss
+++ b/assets/v2/neon/neon-tables.scss
@@ -15,6 +15,11 @@ table {
 	border-spacing:0.5em;
 	margin-left:auto;
 	margin-right:auto;
+
+    &.center-td td {
+        text-align: center;
+        vertical-align: middle;
+    }
 }
 table>caption {
 	font-weight: 900;
@@ -81,3 +86,7 @@ table>caption {
 		table th small {
 			font-weight: normal;
 		}
+
+.wide-table-holder {
+    overflow-x: scroll;
+}
