Part 1: Modifying how flex is included

--- a/assets/v2/structure/flex-incl.scss
+++ b/assets/v2/structure/flex-incl.scss
@@ -1,3 +1,10 @@
+/**
+ * Flex
+ *
+ * Renders some flexbox conveniences
+ */
+
+
 
 @mixin display-flex($inline: false, $require-old-syntaxes: true) {
 
