--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import 'material-shadows-vars';
 @import 'material-structure-vars';
-@import 'flex';
+@import 'flex-incl';
 @import 'css-vars';
 
 
