--- a/assets/v2/neon/neon-tables-incl.scss
+++ b/assets/v2/neon/neon-tables-incl.scss
@@ -88,11 +88,34 @@ table>caption {
 .wide-table-holder {
     overflow-x: scroll;
 
-    &::after {
+    :not(.wide-table-holder-holder)>&::after {
         content: "Pro tip: scroll left and right";
         text-align: end;
         display: block;
         font-size: small;
         opacity: 0.5;
+    }
+}
+
+.wide-table-holder-holder {
+    position: relative;
+
+    &::before {
+        content: "";
+        --shadow-color: #FFF;
+        --shadow-size: 1em;
+        --negative-shadow-size: -1em;
+
+        box-shadow: inset var(--shadow-size) 0 var(--shadow-size) var(--negative-shadow-size) var(--shadow-color),
+                    inset var(--shadow-size) 0 var(--shadow-size) var(--negative-shadow-size) var(--shadow-color),
+                    inset var(--shadow-size) 0 var(--shadow-size) var(--negative-shadow-size) var(--shadow-color),
+
+                    inset var(--negative-shadow-size) 0 var(--shadow-size) var(--negative-shadow-size) var(--shadow-color),
+                    inset var(--negative-shadow-size) 0 var(--shadow-size) var(--negative-shadow-size) var(--shadow-color),
+                    inset var(--negative-shadow-size) 0 var(--shadow-size) var(--negative-shadow-size) var(--shadow-color);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
     }
 }
