--- a/assets/v2/neon/neon-tables-incl.scss
+++ b/assets/v2/neon/neon-tables-incl.scss
@@ -6,11 +6,22 @@
  * Requires varibles to be set with color stylesheets (like neon-fire.scss or neon-water.scss) prior to calling.
  */
 
+@import 'css-vars';
+$css-vars-use-native: true;
+
+
+
+@include css-vars((
+    --table-visual-border-thickness: 0.5em,
+    --table-cell-spacing: var(--table-visual-border-thickness),
+    --table-large-cell-line-thickness: 0.25em,
+));
 
 
 table {
+    border:none;
 	border-collapse:separate;
-	border-spacing:0.5em;
+	border-spacing: var(--table-cell-spacing);
 	margin-left:auto;
 	margin-right:auto;
 
@@ -18,75 +29,80 @@ table {
         text-align: center;
         vertical-align: middle;
     }
-}
-table>caption {
-	font-weight: 900;
-	text-transform: uppercase;
-	font-family: "Roboto Condensed", "Roboto Cn", "Helvetica Condensed", "Roboto", "Helvetica", condensed, sans-serif;
-	margin: 1em 0 0;
-}
-	table,
-	table td,
-	table th {
+
+    &>caption {
+    	font-weight: 900;
+    	text-transform: uppercase;
+    	font-family: "Roboto Condensed", "Roboto Cn", "Helvetica Condensed", "Roboto", "Helvetica", condensed, sans-serif;
+    	margin: 1em 0 0;
+    }
+
+	td,
+	th {
 		border:none;
+
+    	&:not(.plain) {
+    		padding: var(--table-cell-spacing);
+    	}
+    }
+
+	[colspan]:not(.plain) {
+		border-bottom: var(--table-large-cell-line-thickness) solid rgba(0,0,0,.1);
+		padding-bottom: var(--table-large-cell-line-thickness);
 	}
-	table td:not(.plain) ,
-	table th:not(.plain) {
-		padding:0.5em;
+	[rowspan]:not(.plain) {
+		border-right: var(--table-large-cell-line-thickness) solid rgba(0,0,0,.1);
+		padding-right: var(--table-large-cell-line-thickness);
 	}
-	table [colspan]:not(.plain) {
-		border-bottom: .25em solid rgba(0,0,0,.1);
-		padding-bottom: .25em;
-	}
-	table [rowspan]:not(.plain) {
-		border-right: .25em solid rgba(0,0,0,.1);
-		padding-right: .25em;
-	}
-	/*table tr td{
+	/*tr td{
 		border-color:#BBB transparent;
 	}
-	table thead td,
-	table tfoot td{
+	thead td,
+	tfoot td{
 		border-color:transparent;
 	}*/
-	table th:not(.plain) {
+	th:not(.plain) {
 		background:rgba(127,127,127, 0.2);
 		font-weight: bold;
 	}
-		table thead th:not(.vert):not(.plain) { /* All top-row headers */
-			border-top-style: solid;
-			text-align:center;
-			vertical-align:bottom;
-		}
-		table tr th:last-child:not(.horiz):not(.plain) { /* All right-row headers */
-			border-right-style: solid;
-			text-align:left;
-			vertical-align:middle;
-		}
-		table tfoot th:not(.vert):not(.plain) { /* All total-row headers */
-			border-top-style: double;
-			text-align:center;
-			vertical-align:top;
-		}
-		table tr th:first-child:not(.horiz):not(.plain) { /* All left-row headers */
-			border-left-style: solid;
-			text-align:right;
-			vertical-align:middle;
-		}
-		table thead th:not(.vert):not(.plain),
-		table tr th:last-child:not(.horiz):not(.plain),
-		table tfoot th:not(.vert):not(.plain),
-		table tr th:first-child:not(.horiz):not(.plain) {
-			border-width: 0.5em;
-			border-color: var(--theme-primary-color);
-			margin: 1em 10vw;
-		}
-		table th small {
-			font-weight: normal;
-		}
 
-table:not(.plain)>tbody+tbody {
-    box-shadow: 0 calc(-0.5em - 2px) 0 -0.5em;
+	thead th:not(.vert):not(.plain) { /* All top-row headers */
+		border-top-style: solid;
+		text-align:center;
+		vertical-align:bottom;
+	}
+	tr th:last-child:not(.horiz):not(.plain) { /* All right-row headers */
+		border-right-style: solid;
+		text-align:left;
+		vertical-align:middle;
+	}
+	tfoot th:not(.vert):not(.plain) { /* All total-row headers */
+		border-top-style: double;
+		text-align:center;
+		vertical-align:top;
+	}
+	tr th:first-child:not(.horiz):not(.plain) { /* All left-row headers */
+		border-left-style: solid;
+		text-align:right;
+		vertical-align:middle;
+	}
+	thead th:not(.vert):not(.plain),
+	tr th:last-child:not(.horiz):not(.plain),
+	tfoot th:not(.vert):not(.plain),
+	tr th:first-child:not(.horiz):not(.plain) {
+		border-width: var(--table-visual-border-thickness);
+		border-color: var(--theme-primary-color);
+		margin: 1em 10vw;
+	}
+	th small {
+		font-weight: normal;
+	}
+
+    &:not(.plain) {
+        &>tbody+tbody:not(.plain) {
+            box-shadow: 0 calc(-0.5em - 2px) 0 -0.5em;
+        }
+    }
 }
 
 .wide-table-holder {
